# TuxDMX

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CREDITS.md  KNOWN_ISSUES.md  README.md  TESTING_TODO.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/backups/20260223-232713/: tuxdmx.sqlite
docs/: README.md
docs/api/: README.md
docs/development/: dmx-backends.md
docs/setup/: README.md  linux.md  macos.md  windows.md
scripts/: run_tuxdmx_linux.sh  run_tuxdmx_mac.sh  run_tuxdmx_windows.cmd  run_tuxdmx_windows.ps1
src/: main.cpp
src/app/: app_controller.cpp
src/audio/: audio_engine.cpp
src/db/: database.cpp
src/dmx/: dmx_backend_factory.cpp  dmx_engine.cpp  enttec_dmx_pro.cpp
src/http/: http_server.cpp
src/include/: app_controller.hpp  audio_engine.hpp  database.hpp  dmx_backend_factory.hpp  dmx_engine.hpp  dmx_output_backend.hpp  enttec_dmx_pro.hpp  http_server.hpp  logger.hpp  midi_engine.hpp  models.hpp  utils.hpp
src/logger/: logger.cpp
src/midi/: midi_engine.cpp
tests/: test_database.cpp  test_dmx_engine.cpp
web/: app.js  index.html  styles.css
